cookie z-index fix

--- a/styles/components/cookie.scss
+++ b/styles/components/cookie.scss
@@ -5,6 +5,7 @@
         bottom: 20px !important;
         right: auto;
         padding: 2rem !important;
+        z-index: 3147483647;
     }
 
     #cookies-message {
